// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Button/ButtonSegmented Compact 1`] = `
<div
  aria-label="Group label"
  className="fd-segmented-button"
  role="group"
>
  <button
    className="fd-button fd-button--compact"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Left
    </span>
  </button>
  <button
    className="fd-button fd-button--compact is-selected"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Middle
    </span>
  </button>
  <button
    className="fd-button fd-button--compact"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Right
    </span>
  </button>
</div>
`;

exports[`Storyshots Component API/Button/ButtonSegmented No Styles 1`] = `
<div
  aria-label="Group label"
  className="xxx-segmented-button"
  role="group"
>
  <button
    aria-label="Survey"
    className="xxx-button"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--survey"
      role="img"
    />
  </button>
  <button
    aria-label="Pie chart"
    className="xxx-button is-selected"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--pie-chart"
      role="img"
    />
  </button>
  <button
    aria-label="Pool"
    className="xxx-button"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--pool"
      role="img"
    />
  </button>
</div>
`;

exports[`Storyshots Component API/Button/ButtonSegmented Primary 1`] = `
<div
  aria-label="Group label"
  className="fd-segmented-button"
  role="group"
>
  <button
    aria-label="Survey"
    className="fd-button"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--survey"
      role="img"
    />
  </button>
  <button
    aria-label="Pie chart"
    className="fd-button is-selected"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--pie-chart"
      role="img"
    />
  </button>
  <button
    aria-label="Pool"
    className="fd-button"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--pool"
      role="img"
    />
  </button>
</div>
`;
